add: text-match in search
